# logit_control

./: .gitignore  CLAUDE.md  README.md  model_names.yaml  models.yaml  pyproject.toml  test_format_prompt_harmony_lib.py  test_gptoss_querying.py
custom_evals/custom_evals/: __init__.py  huggingface_provider.py
custom_evals_pkg/: pyproject.toml
custom_evals_pkg/custom_evals/: README_LORA.md  __init__.py  data_models.py  example_lora_finetuning.py  huggingface_provider.py  lora_config.py  lora_finetuner.py
custom_evals_pkg/lora/: example_lora_finetuning.py  lora_config.py  lora_finetuner.py  loss_functions.py
evals/: output_control_results_deepseek-coder-7b.json  output_control_results_deepseek-llm-7b.json  output_control_results_llama-3.1-8b.json  output_control_results_llama-3.2-3b.json  output_control_results_qwen2.5-3b-instruct.json  output_control_results_qwen2.5-7b.json  output_control_simple_metrics.csv
evals/base_model_deviation/: parsers.py  run.py  utils.py
evals/output_control/: evaluate_model.py  exp.sh  few_shot_examples.py  lora_finetune.py  parsers.py  preload_models.py  run_eval.py  run_experiment.py  run_experiments.sh  utils.py
provider_wrapper/: pyproject.toml
provider_wrapper/provider_wrapper/: __init__.py  data_models.py  example_lora_finetuning.py  huggingface_provider.py  lora_finetuner.py  loss_functions.py
results/: output_control_combined_results.json  output_control_results.csv  output_control_results_deepseek-llm-7b-chat.json  output_control_results_gpt-oss-20b.json  output_control_results_qwen2.5-3b.json  output_control_simple_metrics.csv  output_control_tvd_results.csv
sad/anti_imitation/: few_shot_examples.py
sad/anti_imitation/output_control/: data_models.py  lora_finetune.py  parsers.py  run_experiment.py  run_experiments.sh  utils.py
scripts/: evaluate_output_control.sh  run_output_control.sh
