[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sadcode"
version = "0.1"
dependencies = [
    "evalugator @ file:///root/dev/evalugator",
    "kaleido==0.2.1",
    "plotly==5.18.0",
    "requests==2.31.0",
    "scipy==1.16.1",
    "seaborn==0.13.2",
    "setuptools==68.0.0",
    "tiktoken>=0.7.0",
    "tokenizers>=0.21.4",
    "PyPDF2>=3.0.1",
    "markdown2>=2.4.13",
    "pdfkit>=1.0.0", 
    "nltk==3.8.1",
    "datasets==2.19.0",
    "zstandard>=0.22.0",
    "torch==2.7.1",
    "transformers==4.54.0",
    "huggingface_hub==0.34.2",
    "bitsandbytes>=0.46.1",
    "accelerate>=1.9.0"
]

[project.scripts]
sad = "sad.main:main"

[tool.setuptools]
packages = ["sad"]
