[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custom_evals"
version = "0.1.0"
description = "HuggingFace provider functionality for custom evaluations"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Custom Evals", email = "custom@evals.com"}
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "backoff",
    "bitsandbytes",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.setuptools]
packages = ["custom_evals"]

[tool.setuptools.package-data]
custom_evals = ["*.json"] 